# SO_Proyecto_Final

./: .gitignore  CMakeLists.txt  README.md  TECHNICAL.md  USAGE.md  instrucciones.md  requirements.txt
experiments/configs/: exp_con_10t_high.json  exp_con_10t_low.json  exp_con_10t_med.json  exp_con_20t_low.json  exp_con_20t_med.json  exp_con_2t_high.json  exp_con_2t_low.json  exp_con_2t_med.json  exp_con_30t_low.json  exp_con_40t_low.json  exp_con_4t_high.json  exp_con_4t_low.json  exp_con_4t_med.json  exp_con_8t_high.json  exp_con_8t_low.json  exp_con_8t_med.json  exp_par_12t_high.json  exp_par_12t_low.json  exp_par_12t_med.json  exp_par_16t_high.json  exp_par_16t_low.json  exp_par_16t_med.json  exp_par_20t_low.json  exp_par_20t_med.json  exp_par_24t_low.json  exp_par_2t_high.json  exp_par_2t_low.json  exp_par_2t_med.json  exp_par_32t_low.json  exp_par_4t_high.json  exp_par_4t_low.json  exp_par_4t_med.json  exp_par_8t_high.json  exp_par_8t_low.json  exp_par_8t_med.json  exp_seq_high.json  exp_seq_low.json  exp_seq_med.json  exp_template.json
notebooks/: analisis_rendimiento.ipynb  analysis.ipynb  presentacion_resultados.ipynb
results/: EXPERIMENT_INFO.md  meta_template.json
results/processed/: REPORT.md  summary.csv
scripts/: Collect-ProcessMetrics.ps1  Run-Experiment.ps1  clean_results.ps1  collect_proc_metrics.sh  parse_results.py  run_all_experiments.sh  run_all_modes.ps1  run_experiment.sh  setup_env.ps1
src/: config.h  main.cpp  metrics.cpp  metrics.h  miner.cpp  miner.h  sha256_hash.cpp  sha256_hash.h
tests/: smoke_test.sh
(+679 files in other folders)
